--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -cw",
-    "push": "rollup -cw --environment DEST:main",
+    "push": "rollup -cw --environment DEST:somygame",
+    "peasantry": "rollup -cw --environment DEST:peasantry",
     "local": "rollup -cw --environment DEST:local",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
