--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "qxscreeps",
   "private": true,
   "scripts": {
-    "build": "rollup -cw",
-    "push": "rollup -cw --environment DEST:main",
-    "local": "rollup -cw --environment DEST:local",
-    "pserver": "rollup -cw --environment DEST:pserver",
+    "build": "rollup -c",
+    "push": "rollup -c --environment DEST:main",
+    "local": "rollup -c --environment DEST:local",
+    "pserver": "rollup -c --environment DEST:pserver",
     "lint": "eslint --fix ."
   },
   "dependencies": {
