--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "ohash": "^0.1.0",
-    "source-map": "^0.6.1"
+    "source-map-js": "^1.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config-ts": "^0.20.7",
-    "@rollup/plugin-commonjs": "^21.1.0",
+    "@antfu/eslint-config-ts": "^0.21.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-replace": "^4.0.0",
     "@types/eslint": "^8.4.1",
