--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "source-map": "^0.6.1"
+    "source-map": "^0.6.1",
+    "source-map-js": "^1.0.2"
   }
 }
