增加爬名和爬说话的原神方案，修改自适应算法适配MOVE个数

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rollup -cw",
     "push": "rollup -cw --environment DEST:somygame",
     "peasantry": "rollup -cw --environment DEST:peasantry",
+    "shenli": "rollup -cw --environment DEST:shenli",
     "local": "rollup -cw --environment DEST:local",
     "localsf": "rollup -cw --environment DEST:localsf",
     "localMo": "rollup -cw --environment DEST:localMo",
